# forgememo

./: .gitignore  AGENT_ACCESS_GUIDE.md  AI_AGENT_ACCESS.md  API.md  CHANGELOG.md  CLA.md  CLAUDE.md  COMMERCIAL.md  CONTRIBUTORS.md  IMPLEMENTATION.md  MANIFEST.in  QUICKSTART.md  README.md  TODOS.md  daily_scan_wrapper.sh  dev-start.sh  example_agent_workflow.py  plan.md  pyproject.toml  render.yaml  requirements.txt  setup.sh  setup_api.sh  test_api.py  test_cli.py  test_session_sync.py
.github/workflows/: ci.yml  install-smoke-test.yml
docs/: MOAT_ANALYSIS.md  ai-platform-evaluation.md  ci-testing-evaluation.md
forgemem/: __init__.py  api.py  cli.py  config.py  core.py  daemon.py  inference.py  mcp_server.py  query_tool.py  scanner.py
forgemem/skills/: claude.md  codex.json  gemini.md
forgememo/: __init__.py  __main__.py  cli.py  config.py  core.py  daemon.py  hook.py  inference.py  mcp_server.py  port.py  query_tool.py  scanner.py  storage.py  worker.py
forgememo/commands/: _shared.py  _windows.py  configure.py  integration.py  internal.py  lifecycle.py  processing.py  query.py
forgememo/skills/: claude.md  codex.json  gemini.md
forgememo/tests/: test_cli_login_handler.py  test_cli_post_auth.py
server/: .env.example  auth.py  billing.py  db.py  email_sender.py  main.py  requirements.txt  supabase_migration.sql  usage.py
server/templates/: cli_auth.html  cli_auth_callback.html  cli_auth_verified.html
server/tests/: test_auth.py  test_billing.py  test_db.py  test_edge_cases.py  test_email.py  test_settings.py  test_stats_activity.py  test_usage.py  test_webapp_auth.py
tests/: conftest.py  test_case_sensitivity.py  test_circuit_breaker.py  test_concurrent_writes.py  test_config.py  test_config_permissions.py  test_core.py  test_daemon_api.py  test_daemon_logging.py  test_error_events.py  test_exit_code_parsing.py  test_hook.py  test_inference_routing.py  test_init_and_schema.py  test_init_provider.py  test_interrupt_threading.py  test_mcp_server.py  test_mcp_transport.py  test_migrations.py  test_platform_behavior.py  test_port_discovery.py  test_query_tool.py  test_scanner.py  test_socket_conflicts.py  test_worker.py
webapp/: package-lock.json  package.json
webapp/app/: layout.tsx
webapp/app/auth/verify/: page.tsx
webapp/app/login/: page.tsx
webapp/app/settings/: settings-client.tsx
webapp/components/: nav.tsx
webapp/lib/: api.ts
