[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forgememo"
version = "0.4.3"
description = "Persistent memory for AI agents — cross-session context that actually sticks"
authors = [{name = "Forgemem Contributors"}]
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"
keywords = ["mcp", "ai", "memory", "claude", "llm", "agents", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.28.0",
    "fastmcp>=2.0.0",
    "flask>=2.3.0",
    "requests>=2.31.0",
    "requests-unixsocket>=0.3.0; sys_platform != 'win32'",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/intelogroup/forgememo"
Documentation = "https://github.com/intelogroup/forgememo#readme"
"Bug Tracker" = "https://github.com/intelogroup/forgememo/issues"

[project.scripts]
forgememo = "forgememo.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
forgememo = ["skills/*.md", "skills/*.json"]

[tool.setuptools.packages.find]
where = ["."]
exclude = [
    "server*",
    "webapp*",
    "tests*",
    "e2e*",
    "docs*",
    "forgememo.tests*",
    ".*",
    "*.sh",
    "*.pem",
    "*.key",
    ".env*",
    "*secrets*",
    "md_scan_hashes.json"
]

[tool.pytest.ini_options]
testpaths = ["tests", "forgememo/tests"]
addopts = "--import-mode=append"
